@@ -1,1 +1,1 @@
-<a id="{id}" href="javascript:clear_image('{itemname}');">{label}</a>
+<a id="{id}" href="javascript:clear_image('{itemname}', {width}, {height});">{label}</a>
