@@ -1,7 +1,7 @@
 <script type="text/javascript">
 //<![CDATA[
 
-    function clear_image(itemname) {
+    function clear_image(itemname, width, height) {
         image = document.getElementById('image-manager-' + itemname);
         hidden = document.getElementById(itemname + '_hidden_value');
         link = document.getElementById(itemname + '-clear');
@@ -12,8 +12,8 @@
 
         if (image) {
             image.src = '{src}';
-            image.width = {width};
-            image.height = {height};
+            image.width = width;
+            image.height = height;
             image.title = '{title}';
             image.alt   = '{alt}';
         }
